[Qt4] QOpenGLContext used in GraphicsContext3DQt.cpp (regression r126635) https://bugs.webkit.org/show_bug.cgi?id=96490

Implements Qt4 code-path for render style GraphicsContext3D::RenderToCurrentGLContext.